2008-01-03  Torsten Rahn  <rahn@kde.org>

    * ChangeLog:
    * src/lib/gps/Track.cpp:
    * src/lib/gps/Track.h:
    * src/lib/gps/GpxSax.cpp:
    * src/lib/gps/GpsTracking.cpp:
    * src/lib/gps/WaypointContainer.cpp:
    * src/lib/gps/GpxSax.h:
    * src/lib/gps/GpxFileModel.cpp:
    * src/lib/AbstractLayer/AbstractLayerData.cpp:
    * src/lib/HttpFetchFile.h:
    * src/lib/HttpDownloadManager.cpp:
    * src/lib/global.h:
    * src/lib/MarbleControlBox.cpp:
    * src/lib/MarbleModel.cpp:
    * src/lib/HttpFetchFile.cpp:

    - Fixed mem leaks in the DownloadManager. 
    - Bumping up the version number to 0.5
    - Fixing Andrew's gpx/GPS functionality

2008-01-03  Torsten Rahn  <rahn@kde.org>

    * src/lib/GlobeScanlineTextureMapper.cpp:
    - Fix precise rendering around north pole

    - Fix for [Bug 154916] Crash on startup in MarbleWidget::resizeEvent
      Still needs verification.

2008-01-02  Torsten Rahn  <rahn@kde.org>

    * src/lib/MarbleWidget.cpp:
    * src/lib/MarbleModel.{cpp,h}:
    * src/lib/ViewParams.cpp:

    - Getting rid of m_downloadManager in MarbleWidget to simplify code.
    - Thereby fixed a mem leak concerning the same issue.

2008-01-01  Torsten Rahn  <rahn@kde.org>

    * src/lib/MarbleWidget.cpp:
    * src/lib/ViewParams.cpp:
    Initialize m_canvasimg before the model gets instantiated.

2008-01-01  Torsten Rahn  <rahn@kde.org>

    * src/lib/MarbleModel.cpp: Initialize.

2008-01-01  Torsten Rahn  <rahn@kde.org>

    * src/lib/MarbleModel.cpp: more paranoid check whether the 
      .dgml file has been opened successfully.

2007-12-31  Torsten Rahn  <rahn@kde.org>

    * src/lib/PlaceMarkLayout.{cpp,h}:
    * src/lib/MarbleModel.cpp:
    * src/lib/VisiblePlaceMark.cpp:

    - Fixing a crash reported by Claudiu Costin.

2007-12-31    Inge Wallin  <inge@lysator.liu.se>

	* src/ControlView.h (marbleControl): New function
	* src/lib/MarbleControlBox.{h,cpp} (updateMapThemes): New function
	(constructor): call updateMapThemes().